Tabbed view: Fix save modified icon being cropped
Before this, save icon's dot was being cropped due to height rule

--- a/browser/css/notebookbar.css
+++ b/browser/css/notebookbar.css
@@ -78,7 +78,7 @@ button.ui-tab.notebookbar {
 	height: 31px;
 }
 
-.notebookbar-shortcuts-bar .unotoolbutton.notebookbar .unobutton img {
+.notebookbar-shortcuts-bar .unotoolbutton.notebookbar .unobutton:not(#Saveimg) img {
 	width: 16px !important;
 	height: 16px !important;
 	margin: 0 !important;
